# MICAFP

./: .gitignore  Cargo.toml  ENGINEERING-PROMPT.md  MERGE-MANIFEST.md  Makefile  README-MICAFP-v10.md  README-QUANTUM.md  README-VIP-ULTRA-MERGED.md  README-VIP-ULTRA-UNIFIED.md  README-VIP-ULTRA.md  README.md  build-vip-ultra.sh  build.sh  deploy.sh  package.json  quickstart.sh  setup.sh  validate.sh
.devcontainer/: Dockerfile  README-CODESPACES.md  devcontainer.json  on-create.sh  post-create.sh  post-start.sh
android/: AndroidManifest.xml  NanBridge.kt  (+8 more)
daemon/: Cargo.toml  build.rs
daemon/bpf/: BUILD.md  tls_splitter.bpf.c
daemon/resources/: cdn-endpoints.json  p2p-bootstrap-peers.json
daemon/src/: error.rs  lib.rs  main.rs
daemon/src/ai/: adversarial_traffic.rs  dpi_classifier.rs  feature_extractor.rs  mod.rs  onnx_runtime.rs  rl_transport_selector.rs  traffic_predictor.rs  ucb_bandit.rs
daemon/src/battery/: adaptive_duty.rs  coalesced_timer.rs  mod.rs  optimizer.rs  power_state.rs
daemon/src/config/: endpoint_manager.rs  ipfs_updater.rs  isp_profile.rs  isp_profiles.rs  mod.rs  schema.rs
daemon/src/cores/: amneziavpn.rs  core_manager.rs  defyx.rs  hiddify.rs  lantern.rs  mahsang.rs  moav.rs  mod.rs  psiphon.rs  singbox.rs  xray.rs
daemon/src/covert/: doh_over_arvancloud.rs  mod.rs
daemon/src/ebpf/: iou_ring.rs  loader.rs  maps.rs  mod.rs  packet_reorder.rs  tls_splitter.rs  ttl_trick.rs
daemon/src/fallback/: block_detector.rs  health_monitor.rs  hot_swap.rs  mod.rs  prewarmer.rs  state_machine.rs
daemon/src/frb_api/: mod.rs
daemon/src/io_uring/: mod.rs  packet_ring.rs  tun_reader.rs  tun_writer.rs  zero_copy.rs
daemon/src/ipc/: mod.rs  named_pipe.rs  protocol.rs  unix_socket.rs
daemon/src/isp_detector/: asn_lookup.rs  mod.rs  poison_tester.rs  protocol_selector.rs  quic_probe.rs
daemon/src/license/: admin_cli.rs  cache.rs  enforcer.rs  mod.rs  nostr_poller.rs  ntp_verifier.rs  qr_code.rs  token.rs
daemon/src/load_balancer/: mod.rs  session_affinity.rs  swrr.rs
daemon/src/mesh/: gossip_protocol.rs  mesh_coordinator.rs  mesh_crypto.rs  mod.rs  topology_manager.rs
daemon/src/metrics/: mod.rs
daemon/src/monitoring/: alert_manager.rs  health_checker.rs  latency_tracker.rs  mod.rs  prometheus_exporter.rs
daemon/src/national_intranet/: acoustic_covert.rs  arvancloud_relay.rs  ble_mesh.rs  fallback_routing.rs  intranet_detector.rs  iran_ip_ranges.rs  local_dns_resolver.rs  mod.rs  nain_detector.rs  ntp_covert.rs  sms_bootstrap.rs  wifi_aware.rs
daemon/src/obfuscation/: ai_dpi_adversarial.rs  amneziawg_advanced.rs  http3_masquerade.rs  mod.rs  packet_size_normalizer.rs  pqc_hybrid.rs  reality_advanced.rs  steganographic_header.rs  timing_jitter.rs  tls_fragment.rs  traffic_shaper.rs  utls_fingerprint.rs  wasm_obfuscator.rs  websocket_tunnel.rs
daemon/src/obfuscation/hysteria2/: mod.rs
daemon/src/obfuscation/naiveproxy/: mod.rs
daemon/src/obfuscation/shadow_tls/: client.rs  handshake.rs  hmac_auth.rs  mod.rs  server.rs
daemon/src/orchestrator/: control_plane.rs  failover.rs  health_monitor.rs  mod.rs
daemon/src/p2p/: i2p_overlay.rs  libp2p_discovery.rs  mod.rs  nat_traversal.rs  peer_exchange.rs  relay_selection.rs  yggdrasil_overlay.rs
daemon/src/platform/: mod.rs
daemon/src/platform/android/: android_tun.rs  mod.rs
daemon/src/platform/ios/: mod.rs
daemon/src/platform/linux/: mod.rs  zapret.rs
daemon/src/platform/windows/: goodbyedpi.rs  mod.rs
daemon/src/quantum/: homomorphic_routing.rs  hybrid_handshake.rs  lattice_onion.rs  mod.rs  neural_steganography.rs  pqc_key_store.rs  qkd_simulation.rs  quantum_noise.rs  quantum_obfuscator.rs  quantum_ratchet.rs  zkp_auth.rs
daemon/src/resilience/: circuit_breaker.rs  fallback_chain.rs  mod.rs  retry_policy.rs  watchdog.rs
daemon/src/scanner/: dns_scanner.rs  dpi_scanner.rs  mod.rs  network_assessor.rs  port_scanner.rs
daemon/src/security/: anti_forensics.rs  device_secret.rs  ephemeral_identity.rs  mod.rs  post_quantum.rs
daemon/src/telemetry/: aggregator.rs  dp_noise.rs  mod.rs  reporter.rs
daemon/src/transport/: cdn_tunnel.rs  cdn_worker.rs  chinese_cdn.rs  cloudflare_worker.rs  dns_tunnel.rs  doh_tunnel.rs  domain_fronting.rs  doq_tunnel.rs  hysteria2.rs  icmp_tunnel.rs  manager.rs  meek.rs  mod.rs  mqtt_tunnel.rs  mqtt_ws.rs  multihop_chain.rs  naive_proxy.rs  pluggable_transport.rs  reality.rs  shadow_tls.rs  slipstream.rs  tuic_v5.rs  vless.rs  webrtc_relay.rs  webtransport.rs
daemon/src/tunnel/: amneziawg.rs  boringtun_adapter.rs  mod.rs  split_tunnel.rs  tun_device.rs  wireguard.rs
daemon/src/watchdog/: mod.rs
extensions/wasm-obfuscator/: Cargo.toml
extensions/wasm-obfuscator/src/: lib.rs
linux/: CMakeLists.txt  unifiedshield.service
linux/packaging/: PKGBUILD  unifiedshield.spec
linux/packaging/debian/: changelog  control  rules
linux/src/: ipc_client.cpp  main.cpp  systemd_service.cpp  tun_interface.cpp
linux/src/advanced/: prometheus_client.cpp
micafp-admin/: Cargo.toml
micafp-admin/src/: main.rs
micafp-core/: Cargo.toml
micafp-core/src/: error.rs  lib.rs
micafp-core/src/anomaly/: mod.rs
micafp-core/src/antidpi/: mod.rs
micafp-core/src/blackout/: mod.rs
micafp-core/src/cache/: mod.rs
micafp-core/src/canary/: mod.rs
micafp-core/src/channel/: dht_bep44.rs  dns_txt.rs  gnunet_ch.rs  i2p_ch.rs  ipfs_ch.rs  meek_lite.rs  mod.rs  nostr_ch.rs  runner.rs  snowflake.rs  ssb_ch.rs  stats.rs  stego.rs
micafp-core/src/deadman/: mod.rs
micafp-core/src/engine/: mod.rs
micafp-core/src/hardware/: mod.rs
micafp-core/src/multikey/: mod.rs
micafp-core/src/resource/: mod.rs
micafp-core/src/secure_storage/: mod.rs
micafp-core/src/tamper/: mod.rs
micafp-core/src/time/: mod.rs
micafp-core/src/token/: mod.rs  revoke.rs
micafp-core/src/zk/: mod.rs
wasm-obfuscator/: Cargo.toml
wasm-obfuscator/src/: lib.rs
windows/: CMakeLists.txt
windows/installer/: setup.iss
windows/src/: ipc_client.cpp  main.cpp  resource.rc  service_manager.cpp  tray_icon.cpp  wintun_interface.cpp
windows/src/advanced/: metrics_overlay.cpp
(+383 files in other folders)
