[package]
name            = "micafp-unified-shield-daemon"
version         = "9.0.0"
edition         = "2021"
authors         = ["MICAFP UnifiedShield Quantum-Ultra Contributors"]
description     = "MICAFP-UnifiedShield-vip-ultra-Quantum-ultra-Quantum v9.0 — Complete merge of all 13 source projects. Zero features removed."
license         = "GPL-3.0-or-later"
repository      = "https://github.com/micafp/UnifiedShield-vip-ultra-Quantum-ultra"
readme          = "README.md"
keywords        = ["vpn", "anti-censorship", "iran", "privacy", "post-quantum"]
categories      = ["network-programming", "cryptography"]

[dependencies]
# Async runtime
tokio            = { version = "1", features = ["full"] }
tokio-util       = { version = "0.7", features = ["compat", "rt"] }
tokio-stream     = { version = "0.1", features = ["sync", "net"] }
futures          = "0.3"
async-trait      = "0.1"
pin-project-lite = "0.2"
flume            = "0.11"
crossbeam-channel = "0.5"

# Cryptography: classical
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["zeroize", "rand_core"] }
curve25519-dalek = { version = "4.0", features = ["serde"] }
hkdf             = "0.12"
sha2             = "0.10"
hmac             = "0.12"
blake3           = "1"
aes-gcm          = "0.10"
chacha20poly1305 = "0.10"
ring             = "0.17"
rand             = { version = "0.8", features = ["small_rng"] }
rand_core        = { version = "0.6", features = ["std"] }
rand_distr       = "0.4"
zeroize          = { version = "1", features = ["derive", "aarch64"] }
rcgen            = "0.13"

# Cryptography: post-quantum
ml-kem           = { version = "0.2", package = "ml-kem", features = ["deterministic", "zeroize"] }

# TLS / QUIC
rustls           = { version = "0.23", features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.7"
rustls-pemfile   = "2.1"
webpki-roots     = "0.26"
tokio-rustls     = "0.26"
quinn            = "0.11"

# HTTP / WebSocket
hyper            = { version = "1", features = ["full"] }
hyper-util       = { version = "0.1", features = ["tokio"] }
http-body-util   = "0.1"
h2               = "0.4"
reqwest          = { version = "0.12", features = [
    "json", "rustls-tls", "stream", "socks",
], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url              = "2"

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
bincode          = "1"
prost            = "0.13"
prost-types      = "0.13"
toml             = "0.8"

# Observability / Tracing
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter", "json", "fmt", "time", "registry",
] }
tracing-appender = "0.2"

# Error handling
anyhow           = "1"
thiserror        = "2"

# String encoding
base64           = "0.22"
hex              = "0.4"

# UUID generation
uuid             = { version = "1.0", features = ["v4", "serde"] }

# Stream utilities
futures-util     = "0.3"

# Cryptographic hashing
sha1             = "0.10"

# Byte buffer utilities
bytes            = "1.0"

# Memory security
libc             = "0.2"
memsec           = "0.7"

# AI / ML inference
ort              = { version = "2.0.0-rc.12", features = ["load-dynamic"], optional = true }
ndarray          = "0.16"

# Networking
socket2          = { version = "0.5", features = ["all"] }
dns-lookup       = "2"
trust-dns-resolver = "0.23.2"
ipnet            = "0.20"

# MQTT
rumqttc          = "0.24"

# Tunnel / TUN interface
tun              = { version = "0.6", features = ["async"], optional = true }
boringtun        = "0.7"

# Platform / system
dirs             = "5"
chrono           = { version = "0.4", features = ["serde"] }
once_cell        = "1"
parking_lot      = { version = "0.12", features = ["deadlock_detection", "serde"] }
dashmap          = "6"
arc-swap         = "1"
cfg-if           = "1"
bitflags         = "2"
strum            = { version = "0.26", features = ["derive"] }
walkdir          = "2"

# v7.0+ Optional dependencies
pqcrypto-mlkem   = { version = "0.1", optional = true }
pqcrypto-mldsa   = { version = "0.1", optional = true }
io-uring         = { version = "0.6", optional = true }
libp2p-optional  = { version = "0.53", features = ["kad", "identify", "tcp", "noise", "yamux"], optional = true, package = "libp2p" }
libbpf-rs        = { version = "0.22", optional = true }

# Unix / Linux
[target.'cfg(unix)'.dependencies]
nix              = { version = "0.29", features = ["signal", "net", "ioctl", "fs"] }
signal-hook      = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Windows
[target.'cfg(windows)'.dependencies]
windows-sys      = { version = "0.59", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_System_IO",
] }

# Android JNI
[target.'cfg(target_os = "android")'.dependencies]
jni              = "0.21"

# Flutter Rust Bridge (mobile)
[target.'cfg(target_os = "android")'.dependencies.flutter_rust_bridge]
version  = "2"
optional = true

[target.'cfg(target_os = "ios")'.dependencies.flutter_rust_bridge]
version  = "2"
optional = true

[build-dependencies]
prost-build = "0.13"
cc          = "1"
serde_json  = "1"

[dev-dependencies]
tempfile  = "3"
criterion = "0.5"

[features]
default = ["platform-linux"]

# Platform features
platform-linux   = ["tun"]
platform-android = ["tun"]
platform-windows = []
platform-ios     = []
platform-openwrt = ["tun"]

# Capability features
ai-inference       = ["ort"]
userspace-tunnel   = ["tun"]
hardened-memory    = []
post-quantum       = []
quic-transport     = []
quantum-extensions = ["post-quantum"]
quantum-full       = ["post-quantum", "hardened-memory"]

# Android JNI
android-jni = []

# Go bridge
go-bridge = []

# Flutter Rust Bridge mobile
frb-mobile = []

# Bundle feature: everything
full = [
    "platform-linux",
    "ai-inference",
    "userspace-tunnel",
    "hardened-memory",
    "post-quantum",
    "quic-transport",
    "quantum-extensions",
    "go-bridge",
    "pqc",
    "io_uring",
    "ebpf",
    "p2p",
]

# Advanced features (v7.0+)
pqc              = ["pqcrypto-mlkem", "pqcrypto-mldsa"]
io_uring         = ["io-uring"]
ebpf             = ["libbpf-rs"]
p2p              = ["libp2p-optional"]
all-advanced     = ["pqc", "io_uring", "ebpf", "p2p"]

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[profile.release.package."*"]
opt-level = "z"

[profile.dev]
opt-level = 0
debug     = 2

[[bin]]
name = "shield-daemon"
path = "src/main.rs"

[lib]
name = "shield_daemon"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]
