[package]
name    = "micafp-core"
version = "10.0.0"
edition = "2021"

[dependencies]
tokio           = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-util      = { version = "0.7" }
async-trait     = "0.1"
thiserror       = "1"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
base64          = "0.22"
hex             = "0.4"
rand            = "0.8"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
ed25519-dalek   = { version = "2", features = ["rand_core"] }
aes-gcm         = "0.10"
hkdf            = "0.12"
sha2            = "0.10"
hmac            = "0.12"
zeroize         = { version = "1.7", features = ["derive"] }
subtle          = "2.5"

# Time
sntpc           = "0.3"

# Network channels
trust-dns-client = "0.23"
mainline        = "1"
reqwest         = { version = "0.12", features = ["rustls-tls", "json"] }
nostr-sdk       = "0.26"
image           = "0.25"

# TLS / Anti-DPI
rustls          = { version = "0.23", features = ["tls12"] }
rustls-pki-types = "1"
h2              = "0.4"

# Platform / OS
sysinfo         = "0.30"
libc            = "0.2"

# Optional: PQC
# pqcrypto-dilithium = "0.5"
# bulletproofs = "4.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
