[package]
name = "unifiedshield-wasm-obfuscator"
version = "1.0.0"
edition = "2021"
authors = ["UnifiedShield Team"]
license = "GPL-3.0"
description = "WASM obfuscator for UnifiedShield censorship circumvention"
repository = "https://github.com/unifiedshield/wasm-obfuscator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.91"
js-sys = "0.3.70"
web-sys = { version = "0.3.70", features = ["Window", "Performance"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true

[profile.dev]
opt-level = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]
