[package]
name = "shield-obfuscator"
version = "6.0.0"
edition = "2021"
authors = ["MICAFP Team"]
description = "WASM traffic obfuscator for UnifiedShield — XOR + byte rotation + SIMD processing"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features = ["console"]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip debug info
panic = "abort"          # No unwinding in WASM

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]

[features]
default = ["simd"]
simd = []

[profile.release.package."*"]
opt-level = "z"
